// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`find-tasks-by-date tool edge cases should handle empty results 1`] = `
"Today's tasks: 0 (limit 50).
Filter: today + 6 more days.
No results. Expand date range with larger 'daysCount'; Check 'overdue' for past-due items."
`;

exports[`find-tasks-by-date tool label filtering should combine date filters with label filters 1`] = `
"Tasks for 2025-08-15: 1 (limit 25).
Filter: 2025-08-15; labels: @important.
Preview:
    Important task for specific date • due 2025-08-15 • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool listing overdue tasks should handle overdue tasks ignoring daysCount 1`] = `
"Overdue tasks: 0 (limit 50).
Filter: overdue tasks only.
No results. Great job! No overdue tasks; Check today's tasks with startDate='today'."
`;

exports[`find-tasks-by-date tool listing overdue tasks should handle overdue tasks with tasks 1`] = `
"Overdue tasks: 1 (limit 50).
Filter: overdue tasks only.
Preview:
    Overdue task • due 2025-08-10 • P2 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool listing tasks by date range should get tasks for today when startDate is "today" 1`] = `
"Today's tasks: 1 (limit 50).
Filter: today + 6 more days.
Preview:
    Today task • due 2025-08-15 • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool listing tasks by date range should handle multiple days with pagination 1`] = `
"Tasks for 2025-08-20: 2 (limit 20), more available.
Filter: 2025-08-20 to 2025-08-16.
Preview:
    Multi-day task 1 • due 2025-08-20 • P1 • id=8485093749
    Multi-day task 2 • due 2025-08-21 • P1 • id=8485093750
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track
- Pass cursor 'next-page-cursor' to fetch more results."
`;

exports[`find-tasks-by-date tool listing tasks by date range should handle specific date 1`] = `
"Tasks for 2025-08-20: 1 (limit 50).
Filter: 2025-08-20 to 2025-08-16.
Preview:
    Specific date task • due 2025-08-20 • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool next steps logic should provide helpful suggestions for empty date range results 1`] = `
"Tasks for 2025-08-20: 0 (limit 10).
Filter: 2025-08-20.
No results. Expand date range with larger 'daysCount'; Check 'overdue' for past-due items."
`;

exports[`find-tasks-by-date tool next steps logic should provide helpful suggestions for empty overdue results 1`] = `
"Overdue tasks: 0 (limit 10).
Filter: overdue tasks only.
No results. Great job! No overdue tasks; Check today's tasks with startDate='today'."
`;

exports[`find-tasks-by-date tool next steps logic should suggest appropriate actions when hasOverdue is true 1`] = `
"Tasks for 2025-08-15: 1 (limit 10).
Filter: 2025-08-15.
Preview:
    Overdue task from list • due 2025-08-10 • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool next steps logic should suggest appropriate actions when startDate is overdue 1`] = `
"Overdue tasks: 1 (limit 10).
Filter: overdue tasks only.
Preview:
    Overdue task • due 2025-08-10 • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;

exports[`find-tasks-by-date tool next steps logic should suggest today-focused actions when startDate is today 1`] = `
"Today's tasks: 1 (limit 10).
Filter: today.
Preview:
    Today's task • due 2025-08-15 • P1 • id=8485093748
Next:
- Use update-tasks to modify priorities or due dates
- Use complete-tasks to mark finished tasks
- Focus on overdue items first to get back on track"
`;
